<resources>
    <string name="app_name">Awfrlak Store</string>
    <string name="app_license">Copyright@Raantech Company</string>
    <string name="welcome">Welcome</string>
    <string name="please_choose_your_preference_language">Please choose your preferred language!</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="start">Start</string>
    <string name="btn_try_again">try Again</string>
    <string name="error_no_internet">No Internet connection</string>
    <string name="error_server">timeout</string>
    <string name="error_msg">Something went wrong</string>
    <string name="session_ended">Session Ended</string>
    <string name="screen_shot_denied">Grant stoarge permission to take screenshot!</string>
    <string name="camera_permission_denied">Grant camera permission to take the 3 seconds video</string>
    <string name="screen_shot">take screenshot</string>
    <string name="alert_dialog_title">Awfrlak Store</string>
    <string name="alert_dialog_all_info_in_english">All information entered must be in English</string>
    <string name="not_available_yet">This feature is coming soon to Al Alami app!</string>
    <string name="sar">SAR</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="loading">Loading …</string>
    <string name="under_development">Under Development</string>
    <string name="ok">OK</string>
    <string name="none">None</string>
    <string name="edit">Edit</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="empty_string" />
    <string name="km">km</string>
    <string name="you_re_not_logged_in">You\'re Not Logged In.</string>
    <string name="you_need_to_login_into_your_account_to_see_this_screen">You need to login into your account\nto see this screen</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="no_activity_data_chart_err">No Data Yet !</string>
    <string name="choose_image_folders_mode_title">select Image</string>
    <string name="choose_image_done_button_txt">Done</string>
    <string name="choose_image_max_select_message">You have reached selection limit!</string>
    <string name="general_err_msg">"SomeThing Happened Please Try Again "</string>
    <string name="must_not_be_empty">must not be empty</string>
    <string name="must_not_be_at_least">must not be at least </string>
    <string name="characters"> characters</string>
    <string name="numbers"> numbers</string>
    <string name="text">Text</string>
    <string name="date">Date</string>
    <string name="email_not_valid_err">Enter a valid email address (example: aaa@bbb.ccc)</string>
    <string name="phone_not_valid_err">Enter a valid phone number (example: 05XXXXXXXX)</string>
    <string name="password_not_valid_err">Enter a valid password (example: P@ssw0rd)</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="password_not_match">Password not match</string>
    <string name="text_not_valid_err">Enter a valid Text</string>
    <string name="price_not_valid_err">Enter a valid Price</string>
    <string name="date_not_valid_err">Enter a valid date</string>
    <string name="time_not_valid_err">Enter a valid time</string>
    <string name="digits">digits</string>
    <string name="travllers">Travellers</string>
    <string name="next">NEXT</string>
    <string name="select_time">Select time</string>
    <string name="adult">Adult</string>
    <string name="submit">Submit</string>
    <string name="data_missing">Data missing</string>
    <string name="please_fill_data_fields">Please fill all the data fields</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hint_date">Date</string>
    <string name="time">Time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="otp">OTP</string>
    <string name="number">Number</string>
    <string name="new_update">NEW UPDATE!</string>
    <string name="there_s_a_new_update_available_for_fly_us_vip">There’s a new update available for\nFLY US VIP</string>
    <string name="update_now">UPDATE NOW</string>
    <string name="remind_me_later">REMIND ME LATER</string>
    <string name="close_app">CLOSE APP</string>
    <string name="important_update">IMPORTANT UPDATE!</string>
    <string name="completed_successfully">Completed Successfully</string>
    <string name="continue_">Continue</string>
    <string name="please_choose_your_preferred_language">Please choose your preferred language!</string>
    <string name="title_on_boarding_1">title_on_boarding_1</string>
    <string name="description_on_boarding_1">description_on_boarding_1</string>
    <string name="title_on_boarding_2">title_on_boarding_2</string>
    <string name="description_on_boarding_2">description_on_boarding_2</string>
    <string name="title_on_boarding_3">title_on_boarding_3</string>
    <string name="description_on_boarding_3">description_on_boarding_3</string>
    <string name="title_on_boarding_4">title_on_boarding_4</string>
    <string name="description_on_boarding_4">description_on_boarding_4</string>
    <string name="add_Media">Add Media</string>
    <string name="media">Media</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_available_data">-- No Available Data --</string>
    <string name="nav_home">Home</string>
    <string name="nav_services">Services</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="done">Done</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="you_have_x_of_product_in_your_cart">You have %s of product in your cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="value_added_tax_15">Value-added tax (15%)</string>
    <string name="total">Total</string>
    <string name="pay">Pay</string>
    <string name="cart">Cart</string>
    <string name="successful_purchase_will_be_delivered_to_you_within_3_days">Successful purchase, will be delivered to you within 3 days</string>
    <string name="purchas_completed">Purchase Completed</string>
    <string name="login">Login</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="logout">Logout</string>
    <string name="verification">Verification</string>
    <string name="please_check_you_message_for_a_four_digit_security_code_and_enter_it_below">Please check you message for a four-digit security code and enter it below.</string>
    <string name="i_didn_t_receive_the_code">I didn’t receive the code</string>
    <string name="confirm">Confirm</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="verify">Verify</string>
    <string name="use_high_priority_notifications">Use high priority notifications</string>
    <string name="show_previews_of_notifications_at_the_top_of_the_screen">Show previews of notifications at the top\nof the screen</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_my_purchases">My Purchases</string>
    <string name="menu_favorites">Favorite</string>
    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about_us">About Us</string>
    <string name="contact_us">Contact us</string>
    <string name="search_what_to_ask_here">Search here</string>
    <string name="all_categories">All Categories</string>
    <string name="phones">Phones</string>
    <string name="accessories">Accessories</string>
    <string name="used">Used</string>
    <string name="stores">Stores</string>
    <string name="mobiles">Mobiles</string>
    <string name="services">Services</string>
    <string name="send_question">Send Question</string>
    <string name="order_service">Order service</string>
    <string name="service">Service</string>
    <string name="repair_time">Repair time</string>
    <string name="product_information">Product Information</string>
    <string name="mobile_type">Type</string>
    <string name="mobile_storage">Storage</string>
    <string name="mobile_color">Color</string>
    <string name="mobile_sim_number">Sim number</string>
    <string name="accessory_dedicated">Dedicated</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="registration_certificate">Registration Certificate</string>
    <string name="store_information">Store Information</string>
    <string name="logo">Logo</string>
    <string name="add_photos_to_the_store_optional">Add photos to the store (optional)</string>
    <string name="please_select_logo">Please select logo</string>
    <string name="store_images">Store Images</string>
    <string name="please_select_store_images">Please select store images</string>
    <string name="responsible_person">Responsible Person</string>
    <string name="register">Register</string>
    <string name="buy_now">Buy Now</string>
    <string name="delivery">Delivery</string>
    <string name="search_here">Search here</string>
    <string name="location">Location</string>
    <string name="please_pick_location">Please pick location</string>
    <string name="store_name">Store Name</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_products">Products</string>
    <string name="nav_orders">Orders</string>
    <string name="add_mobile_for_sale">Add Mobile For Sale</string>
    <string name="add_services">Add Services</string>
    <string name="add_accessories">Add Accessories</string>
    <string name="cities">Cities</string>
    <string name="please_select_city">Please select city</string>
    <string name="mobile_name">Mobile Name</string>
    <string name="add_mobile_type">Mobile Type</string>
    <string name="add_mobile_storage_size">Storage Size</string>
    <string name="add_mobile_colors">Colors</string>
    <string name="add_mobile_sim_number">Sim Numbers</string>
    <string name="add_mobile_status">Mobile Status</string>
    <string name="add_mobile_info">Mobile More Information</string>
    <string name="add_mobile_images">Add Mobile Images</string>
    <string name="is_available">Is Available</string>
    <string name="price">Price</string>
    <string name="add_product">Add Product</string>
    <string name="new_mobile">New Mobile</string>
    <string name="old_mobile">Old Mobile</string>
    <string name="please_select_the_mobile_type">Please select mobile type</string>
    <string name="please_select_the_mobile_storage">Please select the mobile storage</string>
    <string name="service_name">Service Name</string>
    <string name="add_service_info">Service More Information</string>
    <string name="add_service_images">Add Service Images(optional)</string>
    <string name="delivery_available">Delivery Available</string>
    <string name="add_service">Add Service</string>
    <string name="service_price">Price(optional)</string>
    <string name="time_to_complete_the_service_optional">Time to complete the service(optional)</string>
    <string name="parcel">Parcel</string>
    <string name="trace_shipment">Trace shipment</string>
    <string name="bill">Bill</string>
</resources>