<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.raantech.awfrlak.store.data.enums.OrderStatusEnum" />

        <variable
            name="viewModel"
            type="com.raantech.awfrlak.store.ui.orders.viewmodels.OrdersViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/layout_toolbar" />

        <include
            android:id="@+id/layout_no_data"
            layout="@layout/layout_no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_order_item_products" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnParcel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginStart="@dimen/layouts_margin_start"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/layouts_margin_end"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/parcel"
            android:textSize="@dimen/_19ssp"
            android:visibility="@{viewModel.orderItemToView.showParcel() ? View.VISIBLE : View.GONE}"
            app:cornerRadius="@dimen/_7sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTrace"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginStart="@dimen/layouts_margin_start"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/layouts_margin_end"
            android:gravity="center"
            android:text="@string/trace_shipment"
            android:textSize="@dimen/_19ssp"
            android:visibility="@{viewModel.orderItemToView.showTrace() ? View.VISIBLE : View.GONE}"
            app:cornerRadius="@dimen/_7sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBill"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginStart="@dimen/layouts_margin_start"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/layouts_margin_end"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/bill"
            android:textSize="@dimen/_19ssp"
            android:visibility="@{viewModel.orderItemToView.showTrace() ? View.VISIBLE : View.GONE}"
            app:cornerRadius="@dimen/_7sdp" />
    </LinearLayout>
</layout>